--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -29,6 +29,7 @@
     <div class="flex space-x-4">
         <a href="/resource-request" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">Request Resources</a>
         <a href="/talent-list" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">Manage Talent Application</a>
+        <a href="/candidate-request" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">View Candidate' Application</a>
         <a href="/interview-request" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">Interview</a>
         <a href="/interview-list" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">Interview List</a>
         <a href="/contact" class="px-4 py-2 bg-gray-600 text-white rounded hover:bg-gray-700">Contact Us</a>
