--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -27,6 +27,8 @@
     <h1 class="text-4xl font-bold text-gray-800 mb-4">Welcome to TVPSS</h1>
     <p class="text-lg text-gray-600 mb-6">Your go-to platform for managing resources efficiently.</p>
     <div class="flex space-x-4">
+        <a href="/program-status-form" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">Submit School Program's Status</a>
+        <a href="/program-status-list" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">Manage School Program's Status</a>
         <a href="/resource-request" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">Request Resources</a>
         <a href="/talent-list" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">Manage Talent Application</a>
         <a href="/candidate-request" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">View Candidate' Application</a>
