--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -30,7 +30,7 @@
         <a href="/program-status-form" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">Submit School Program's Status</a>
         <a href="/program-status-list" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">Manage School Program's Status</a>
         <a href="/resource-request" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">Request Resources</a>
-        <a href="/manage" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">Manage Resource Request</a>
+        <a href="/manage-resource-request" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">Manage Resource Request</a>
         <a href="/talent-list" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">Manage Talent Application</a>
         <a href="/candidate-request" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">View Candidate' Application</a>
         <a href="/interview-request" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">Interview</a>
